--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi bi-gem fs-1 text-color"></i></div>
-              color   <h3 class="h4 mb-2">Sturdy Themes</h3>
+                             <h3 class="h4 mb-2">Sturdy Themes</h3>
                             <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
                         </div>
                     </div>
@@ -270,7 +270,7 @@ The data-sb-can-submit attribute is set to "no,"
         
         <!-- Message input -->
         <div class="form-floating mb-3">
-         <textarea  id="message"  class="form-control"  placeholder="Enter your message here...." style="height: 10rem;" data-sb-validations="required"  data-sb-can-submit="no" type="text"></textarea>
+         <textarea  id="message"  class="form-control"  placeholder="Enter your message here...." style="height: 160px;" data-sb-validations="required"  data-sb-can-submit="no" type="text"></textarea>
          <label for="message">Message</label>
          <div class="invalid-feedback" data-sb-feedback="message:required"> <h6>required.</h6></div>
         </div>
