--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body id="page-top">
 
     <!--"START BOOTSTAP" nav-bar section -->
-    <nav id="start-bootsrap" class="navbar navbar-expand-lg navbar-light fixed-top   navbar-shrink py-3  ">
+    <nav id="start-bootsrap" class="navbar navbar-expand-lg navbar-light fixed-top  bg-white navbar-shrink py-3  ">
         <div class="container-sm ">
           <a class="navbar-brand  " href="#page-top">Start Bootstrap</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,7 +134,7 @@
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
               <img class="portfolio-img " src="/img/1.jpg" alt="..." style="width: 100%;">
-            <div class="portfolio-box-caption text-white bg-color">
+            <div class="portfolio-box-caption  text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
             </div>
