--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="row g-0 border-0">
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
-              <img class="portfolio-img " src="/img/1.jpg" alt="..." style="width: 100%;">
+              <img class="portfolio-img " src="img/1.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption  text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
