--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>   
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
-              <img class="portfolio-img " src="/img/2.jpg" alt="..." style="width: 100%;">
+              <img class="portfolio-img " src="img/2.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
@@ -151,7 +151,7 @@
     </div>   
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
-              <img class="portfolio-img " src="/img/3.jpg" alt="..." style="width: 100%;">
+              <img class="portfolio-img " src="img/3.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
@@ -160,7 +160,7 @@
     </div>   
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
-              <img class="portfolio-img " src="/img/4.jpg" alt="..." style="width: 100%;">
+              <img class="portfolio-img " src="img/4.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
@@ -169,7 +169,7 @@
     </div>   
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
-              <img class="portfolio-img " src="/img/5.jpg" alt="..." style="width: 100%;">
+              <img class="portfolio-img " src="img/5.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
@@ -178,7 +178,7 @@
     </div>   
       <div class="col-lg-4 col-sm-6">
             <div class="img-text">
-              <img class="portfolio-img " src="/img/6.jpg" alt="..." style="width: 100%;">
+              <img class="portfolio-img " src="img/6.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
               <h5>Category</h5>
               <h5>Project Name</h5>
