--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ The data-sb-can-submit attribute is set to "no,"
         <div class="form-floating mb-3">
           <input id="phone"  type="tel" data-sb-validations="required" data-sb-can-submit="no" class="form-control is-invalid" placeholder="enter a valid phone number" >
           <label for="phone">phone number</label>
-          <div class="invalid-feedback" data-sb-feedback="name:required">
+          <div class="invalid-feedback" data-sb-feedback="phone:required">
             <h6>
             required.
             </h6>
