--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="img-text">
               <img class="portfolio-img " src="img/1.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption  text-white bg-color">
-              <h5>Category</h5>
+              <h5 class="text-muted">Category</h5>
               <h5>Project Name</h5>
             </div>
             </div>
@@ -144,7 +144,7 @@
             <div class="img-text">
               <img class="portfolio-img " src="img/2.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
-              <h5>Category</h5>
+              <h5 class="text-muted">Category</h5>
               <h5>Project Name</h5>
             </div>
             </div>
@@ -153,7 +153,7 @@
             <div class="img-text">
               <img class="portfolio-img " src="img/3.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
-              <h5>Category</h5>
+              <h5 class="text-muted">Category</h5>
               <h5>Project Name</h5>
             </div>
             </div>
@@ -162,7 +162,7 @@
             <div class="img-text">
               <img class="portfolio-img " src="img/4.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
-              <h5>Category</h5>
+              <h5 class="text-muted">Category</h5>
               <h5>Project Name</h5>
             </div>
             </div>
@@ -171,7 +171,7 @@
             <div class="img-text">
               <img class="portfolio-img " src="img/5.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
-              <h5>Category</h5>
+              <h5 class="text-muted">Category</h5>
               <h5>Project Name</h5>
             </div>
             </div>
@@ -180,7 +180,7 @@
             <div class="img-text">
               <img class="portfolio-img " src="img/6.jpg" alt="..." style="width: 100%;">
             <div class="portfolio-box-caption text-white bg-color">
-              <h5>Category</h5>
+              <h5 class="text-muted">Category</h5>
               <h5>Project Name</h5>
             </div>
             </div>
@@ -194,7 +194,7 @@
 <section class=" bg-dark text-white py-5 ">
   <div class="container text-center py-5 mt-5">
       <h2 class="mb-5">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl rounded-5 py-3 px-5" href="https://startbootstrap.com/theme/creative/">Download Now!</a>
+      <a class="btn btn-light btn-xl rounded-5 py-3 px-5" href="">Download Now!</a>
   </div>
 </section>
 
@@ -282,7 +282,7 @@ The data-sb-can-submit attribute is set to "no,"
           and it's initially disabled (with the "disabled" class)
            to prevent submission until the form is valid. -->
         <div class="d-grid">
-          <button class="btn border-0 bg-color text-white btn-xl disabled" id="submitButton" type="submit">Submit</button>
+          <button class="btn border-0 bg-color text-white btn-xl" id="submitButton" type="submit">Submit</button>
         </div>
       </form>
     </div>
